# bluebubbles-mcp

./: .gitignore  README.md  bluebubbles-mcp  justfile  lefthook.yml  pyproject.toml  run.sh
.claude/: settings.json
.claude/skills/bluebubbles/: SKILL.md
.github/workflows/: docker-adhoc.yml  docker.yml
bluebubbles/: SKILL.md
bluebubbles/references/: best-practices.md  tools.md
scripts/: e2e_test.py  smoke_docker.py  smoke_uvx.py  validate_tools.py
skill/: SKILL.md
skill/references/: best-practices.md  tools.md
src/bb_mcp/: client.py  server.py
tests/: test_client.py  test_server.py
tests/integration/: conftest.py  test_chats.py  test_contacts.py  test_messages.py  test_server.py  test_server_tools.py
