[project]
name = "bb-mcp"
version = "0.2.0"
description = "MCP server for BlueBubbles iMessage bridge"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0,<4",
    "httpx>=0.27.0",
    "typer>=0.12",
]

[project.scripts]
bb-mcp = "bb_mcp.server:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bb_mcp"]
